--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "axios": "^0.16.2",
     "react-scripts": "0.9.5",
-    "wdio-dot-reporter": "0.0.9",
-    "wdio-mocha-framework": "^0.5.11"
+    "redux-promise-middleware": "^4.4.1"
   },
   "dependencies": {
     "react": "^15.4.2",
