--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "react-scripts": "0.9.5",
+    "selenium-webdriver": "^3.6.0",
     "wdio-dot-reporter": "0.0.9",
     "wdio-mocha-framework": "^0.5.11"
   },
