--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "axios": "^0.16.2",
     "react-scripts": "0.9.5",
     "redux-promise-middleware": "^4.4.1",
     "selenium-webdriver": "^3.6.0",
