--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "axios": "^0.16.2",
+    "nightwatch": "^0.9.16",
     "react-scripts": "0.9.5",
     "redux-promise-middleware": "^4.4.1",
     "selenium-webdriver": "^3.6.0",
