--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 
 # production
 /build
+/tests_output
+selenium-debug.log
+nightwatchProps.js
 
 # misc
 .DS_Store
@@ -15,5 +18,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-apiKey.js
+yarn.lock
